--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <a class="nav-link img-fluid" href="#"><img src="images/bell log.png" alt="bell logo"></a>
           </li>
           <li class="nav-item d-flex caremel" style="margin-left:0;">
-            <a class="nav-link" href="#"><img src="/images/caramel Pop.jpg" alt="caramel pop" class="img-fluid"></a>
+            <a class="nav-link" href="#"><img src="images/caramel Pop.jpg" alt="caramel pop" class="img-fluid"></a>
             <div>
               <p>Caramel Pop</p>
               <span class="small">caramelpop@me.com</span>
